# harmony

./: Cargo.toml
examples/: 1.rs  test.rs
src/: client.rs  consts.rs  error.rs  gateway.rs  http.rs  lib.rs  macros.rs  model.rs
src/client/: builder.rs  context.rs  event_handler.rs  gateway_handler.rs
src/gateway/: dispatch_event.rs  event.rs  intents.rs  status.rs
src/http/: create_embed.rs  create_guild_role.rs  create_message.rs  edit_message.rs  execute_webhook.rs  rate_limiter.rs  route.rs
src/model/: activity.rs  channel.rs  id.rs  member.rs  message.rs  role.rs  user.rs  webhook.rs
